# CMakePractice

./: CMakeLists.txt  CommandStudy  README.md
libraries/header/in/: CMakePracticeConfig.h.in
sources/: main.cpp
